stops main element from going behind the navbar

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -16,6 +16,10 @@
     margin-right:2rem;
 }
 
+main {
+  padding-top: 15px;
+}
+
 .navbar-brand {
     font-size: 2.1rem;
 }
@@ -36,8 +40,9 @@ html {
     position: relative;
     min-height: 100%;
   }
+
   body {
-    padding-top: 9rem;
+    /*padding-top: 9rem;*/
     margin-bottom: 60px; /* Margin bottom by footer height */
   }
   .footer {
